[gd_scene load_steps=20 format=3 uid="uid://cj5nus31jyaxt"]

[ext_resource type="Script" uid="uid://b7qrrwnibpr1" path="res://Scenes/UI/PlayView/PlayView.gd" id="1_j5275"]
[ext_resource type="Theme" uid="uid://quyp3hv3edt" path="res://Scenes/UI/Theme/MainTheme.tres" id="1_oklkm"]
[ext_resource type="PackedScene" uid="uid://w31voexjaly" path="res://Scenes/Terrain/Dungeon_1/MAP_Dungeon_Test.tscn" id="2_oklkm"]
[ext_resource type="Script" uid="uid://d0qhm3bot5pxa" path="res://Scenes/UI/HUD/HUD.gd" id="3_ch5r3"]
[ext_resource type="Texture2D" uid="uid://dbkduc6pw2bv4" path="res://Scenes/UI/HUD/Healthbar_texture.png" id="4_3p3yu"]
[ext_resource type="Script" uid="uid://fq6v5jfy7nau" path="res://Scenes/UI/PlayView/PopupText.gd" id="4_ch5r3"]
[ext_resource type="Texture2D" uid="uid://d4djiikmkfebp" path="res://Scenes/UI/HUD/Interaction/F_Key.png" id="5_3p3yu"]
[ext_resource type="Texture2D" uid="uid://cu28ka6qhmp2" path="res://Scenes/UI/HUD/Healthbar_progress_texture.png" id="5_povyt"]
[ext_resource type="FontFile" uid="uid://d4bwotd6bjflf" path="res://Assets/Font/m5x7.ttf" id="6_ufkdj"]
[ext_resource type="PackedScene" uid="uid://d1f8xxeridxnk" path="res://Scenes/UI/HUD/Cursor/Cursor.tscn" id="7_uldec"]
[ext_resource type="Script" uid="uid://mvwuldoxl7by" path="res://Scenes/UI/PlayView/Vignette.gd" id="8_povyt"]
[ext_resource type="Shader" uid="uid://kvauqeyvssi4" path="res://Assets/Material/Shader/Vignette.gdshader" id="8_ufkdj"]
[ext_resource type="Script" uid="uid://chm6fnyrdc77i" path="res://Scenes/UI/PlayView/PlayMenu.gd" id="12_uldec"]
[ext_resource type="Texture2D" uid="uid://dnoq88bdyt026" path="res://Scenes/UI/Asset/X_button.png" id="13_t3llb"]
[ext_resource type="Script" uid="uid://bkx5uuva7n2ca" path="res://Scenes/UI/PlayView/CharacterDataView.gd" id="14_0bptl"]
[ext_resource type="Texture2D" uid="uid://dgr4imrjp48uu" path="res://Scenes/UI/Asset/+_button.png" id="14_r5ygv"]
[ext_resource type="Texture2D" uid="uid://i2gp5kx2jtuh" path="res://Scenes/UI/Asset/+_button_disabled.png" id="16_m0chj"]
[ext_resource type="Script" uid="uid://k6jpgqu6wugu" path="res://Scenes/UI/PlayView/Inventory View.gd" id="17_5me5s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uldec"]
shader = ExtResource("8_ufkdj")
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5
shader_parameter/closure = 15.0

[node name="PlayView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oklkm")
script = ExtResource("1_j5275")
DEMO_DUNGEON = ExtResource("2_oklkm")

[node name="Game SubViewport" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="Game SubViewport"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(576, 324)
render_target_update_mode = 4

[node name="Dungeon_1" parent="Game SubViewport/SubViewport" instance=ExtResource("2_oklkm")]

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Vignette" type="ColorRect" parent="UI"]
material = SubResource("ShaderMaterial_uldec")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_povyt")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_ch5r3")

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="HP_Bar" type="TextureProgressBar" parent="UI/HUD/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 40.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("4_3p3yu")
texture_progress = ExtResource("5_povyt")
tint_progress = Color(0, 1, 0, 1)

[node name="HP_Label" type="Label" parent="UI/HUD/MarginContainer/VBoxContainer/HP_Bar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -6.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_ufkdj")
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XP_Bar" type="TextureProgressBar" parent="UI/HUD/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 6)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 40.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 2
stretch_margin_right = 4
stretch_margin_bottom = 2
texture_under = ExtResource("4_3p3yu")
texture_progress = ExtResource("5_povyt")
tint_progress = Color(0, 1, 1, 1)

[node name="PopupText" type="Control" parent="UI"]
custom_minimum_size = Vector2(600, 160)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 160.0
grow_horizontal = 2
script = ExtResource("4_ch5r3")

[node name="MarginContainer" type="MarginContainer" parent="UI/PopupText"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="UI/PopupText/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/PopupText/MarginContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/PopupText/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -21.0
offset_right = -11.0
offset_bottom = 19.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_3p3yu")

[node name="Control" type="Control" parent="UI/PopupText/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="PlayMenu" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_uldec")

[node name="Background" type="ColorRect" parent="UI/PlayMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4745098)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -208.0
offset_right = 358.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MenuTop" type="HBoxContainer" parent="UI/PlayMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2

[node name="Tabs" type="TabBar" parent="UI/PlayMenu/VBoxContainer/MenuTop"]
layout_mode = 2
size_flags_horizontal = 3
focus_behavior_recursive = 1
current_tab = 0
clip_tabs = false
close_with_middle_mouse = false
scrolling_enabled = false
scroll_to_selected = false
tab_count = 4
tab_0/title = "Character"
tab_1/title = "Inventory"
tab_2/title = "Skills"
tab_3/title = "Options"

[node name="Close" type="TextureButton" parent="UI/PlayMenu/VBoxContainer/MenuTop"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture_normal = ExtResource("13_t3llb")
stretch_mode = 0

[node name="Menu Panel" type="Panel" parent="UI/PlayMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterMenu" type="Control" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer"]
visible = false
layout_mode = 2
script = ExtResource("14_0bptl")

[node name="Stats" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 448.0
offset_right = 698.0
offset_bottom = 358.0

[node name="STATS" type="Panel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer"]
layout_mode = 2

[node name="AvailableIncrease" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
text = "Available: (2)"
horizontal_alignment = 1

[node name="StatBox" type="HBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox"]
layout_mode = 2

[node name="Strength" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer"]
layout_mode = 2
text = "Strength"
fit_content = true
autowrap_mode = 0

[node name="Dexterity" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer"]
layout_mode = 2
text = "Dexterity"
fit_content = true
autowrap_mode = 0

[node name="Intelligence" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer"]
layout_mode = 2
text = "Intelligence"
fit_content = true
autowrap_mode = 0

[node name="Wisdom" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer"]
layout_mode = 2
text = "Wisdom"
fit_content = true
autowrap_mode = 0

[node name="Constitution" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer"]
layout_mode = 2
text = "Constitution"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Strength_value" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 26)
layout_mode = 2
text = "2"
autowrap_mode = 0
horizontal_alignment = 1

[node name="Dexterity_value" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 26)
layout_mode = 2
text = "2"
autowrap_mode = 0
horizontal_alignment = 1

[node name="Intelligence_value" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 26)
layout_mode = 2
text = "2"
autowrap_mode = 0
horizontal_alignment = 1

[node name="Wisdom_value" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 26)
layout_mode = 2
text = "2"
autowrap_mode = 0
horizontal_alignment = 1

[node name="Constitution_value" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 26)
layout_mode = 2
text = "2"
autowrap_mode = 0
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox"]
layout_mode = 2

[node name="Strength_button" type="TextureButton" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("14_r5ygv")
texture_disabled = ExtResource("16_m0chj")
stretch_mode = 0

[node name="Dexterity_button" type="TextureButton" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("14_r5ygv")
texture_disabled = ExtResource("16_m0chj")
stretch_mode = 0

[node name="Intelligence_button" type="TextureButton" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("14_r5ygv")
texture_disabled = ExtResource("16_m0chj")
stretch_mode = 0

[node name="Wisdom_button" type="TextureButton" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("14_r5ygv")
texture_disabled = ExtResource("16_m0chj")
stretch_mode = 0

[node name="Constitution_button" type="TextureButton" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("14_r5ygv")
texture_disabled = ExtResource("16_m0chj")
stretch_mode = 0

[node name="InventoryMenu" type="Control" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer"]
layout_mode = 2
script = ExtResource("17_5me5s")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EQUIP" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Equipped_title" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer/EQUIP"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
bbcode_enabled = true
text = "Equipped"
scroll_active = false
horizontal_alignment = 1

[node name="Equipment" type="ScrollContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer/EQUIP"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Equipment_content" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer/EQUIP/Equipment"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Head" type="FoldableContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer/EQUIP/Equipment/Equipment_content"]
layout_mode = 2
title = "Head"

[node name="INV" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory_title" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer/INV"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
bbcode_enabled = true
text = "Inventory"
scroll_active = false
horizontal_alignment = 1

[node name="Inventory" type="ScrollContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer/INV"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Inventory_content" type="VBoxContainer" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer/HBoxContainer/INV/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Coin Value" type="RichTextLabel" parent="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/InventoryMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10 G"
fit_content = true
horizontal_alignment = 2

[node name="Cursor" parent="." instance=ExtResource("7_uldec")]
layout_mode = 1

[connection signal="tab_changed" from="UI/PlayMenu/VBoxContainer/MenuTop/Tabs" to="UI/PlayMenu" method="_tab_changed"]
[connection signal="pressed" from="UI/PlayMenu/VBoxContainer/MenuTop/Close" to="UI/PlayMenu" method="close_menu"]
[connection signal="pressed" from="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3/Strength_button" to="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu" method="increase_stat" binds= ["STR"]]
[connection signal="pressed" from="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3/Dexterity_button" to="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu" method="increase_stat" binds= ["DEX"]]
[connection signal="pressed" from="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3/Intelligence_button" to="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu" method="increase_stat" binds= ["INT"]]
[connection signal="pressed" from="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3/Wisdom_button" to="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu" method="increase_stat" binds= ["WIS"]]
[connection signal="pressed" from="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu/Stats/STATS/MarginContainer/VBoxContainer/StatBox/VBoxContainer3/Constitution_button" to="UI/PlayMenu/VBoxContainer/Menu Panel/MarginContainer/CharacterMenu" method="increase_stat" binds= ["CON"]]
